[package]
name = "wasm-vfs"
version = "0.1.1"
edition = "2021"
description = "a Virtual Filesystem layer for Wasm Applications"
license = "Apache-2.0"
repository = "https://github.com/dphilla/wasm-vfs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
path = "src/lib.rs"

